# python-switch2

./: README.md  pyproject.toml
.github/workflows/: publish.yml  pythonpackage.yml
switch2/: __init__.py  api.py
tests/: test_api.py
